# Phising_Detection_Algorithm

./: Dockerfile  Readme.md  cli.py  find_dkim_check.py  find_dkim_dmarc.py  find_email_body.py  find_from_email.py  find_links.py  find_reply_id.py  find_sender_ip.py  find_sending_time.py  find_smpts_sender_domain.py  find_spf.py  main.py  non_scam.eml  pyproject.toml
files/: find_dkim_check.py  find_dkim_dmarc.py  find_from_email.py  find_reply_id.py  find_sender_ip.py  find_sending_time.py  find_spf.py  main.py  phisingwords.py
